@@ -1,4 +1,5 @@
 - Support translating enums (or options for :select form_ui on any column) nested in the pluralized name of the column, activerecord.attributes.model_name.pluralized_column.enum_value, defaults to old way activerecord.attributes.model_name.enum_value
+- Support subform_columns option in column form_ui_options, or column's options, when the column is rendered as subform
 
 = 4.2.2 (not released)
 - Support setting form_ui_options with nil, for subforms
